# thermal-expansion-platform

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  NOTICE-THIRD-PARTY.md  README-PORTABLE.md  README.md  pyproject.toml  start-linux.sh  start-macos.command  start-windows.cmd  start-windows.ps1
.github/workflows/: ci.yml
apps/web/: README.md
datasets/: README.md
datasets/manifests/: nte_candidates_6701_v1_1.json  nte_candidates_6702_v1.json
datasets/sample/: nte_candidates_sample.json
datasets/schema/: nte_candidates_v1.schema.json
docs/: architecture.md  data-contract.md  fast-screening.md  legacy-code-map.md  release-catalog.md  roadmap.md  software-registration.md  validation.md
environments/: compute-conda.yml
scripts/: build-portable-release.py  build_fig1d_reference.py  configure-agent.ps1  run-web.ps1  tep.ps1
src/te_platform/: __init__.py  __main__.py  cli.py  config.py  launcher.py
tests/: test_agent_database.py  test_agent_llm.py  test_api.py  test_catalog_installer.py  test_composite_screening.py  test_curve_rom.py  test_database_separation.py  test_fast_sbr.py  test_importer.py  test_job_repository.py  test_jobs.py  test_launcher.py  test_material_pair.py  test_precision_modes.py  test_precision_progress.py  test_precision_recovery.py  test_precision_results.py  test_pte_importer.py  test_qha_curve_importer.py  test_release_catalog.py  test_rom.py  test_sbr.py  test_screening_projects.py  test_script_compat.py  test_structure_converter.py  test_structure_scene.py  test_wsl_executor.py  test_zte_report.py
(+63 files in other folders)
