[project]
name = "thermal-expansion-platform"
version = "0.10.0"
description = "热膨胀材料智能计算、筛选、数据管理与零膨胀设计平台"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "NTE/PTE Research Team" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "numpy>=1.26,<3.0",
  "pymatgen>=2025.6,<2027",
  "python-multipart>=0.0.12,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
tep = "te_platform.cli:main"
tep-web = "te_platform.launcher:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
te_platform = [
  "web/*.html",
  "web/*.css",
  "web/*.js",
  "web/*.json",
  "web/vendor/*.js",
  "web/vendor/*.txt",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
